book overview and authors
